--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="@color/material_dynamic_primary10"
         android:layout_marginBottom="32dp" /> <!-- Adjust bottom margin as needed -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
