minor aethetic changes

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="32dp"
-        android:text="Welcome Back"
+        android:text="Welcome Back!"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
