--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,13 @@
         android:hint="Search by location"
         android:inputType="text" />
 
+    <!-- Age Search Bar -->
+    <EditText
+        android:id="@+id/searchAgeBar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:hint="Search by age"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/searchButton"
@@ -37,4 +44,5 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1" />
+
 </LinearLayout>
