--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <ImageView
@@ -13,16 +13,6 @@
         android:layout_gravity="center"
         android:layout_marginBottom="32dp"
         android:src="@drawable/ic_launcher_foreground" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="32dp"
-        android:text="Welcome Back!"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -66,6 +56,18 @@
         android:text="Login"
         android:textColor="@color/white" />
 
+    <TextView
+        android:id="@+id/register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="20dp"
+        android:text="Don't have an account? Register here"
+        android:textColor="@color/material_dynamic_primary10" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
@@ -78,16 +80,11 @@
         android:id="@+id/forgotPasswordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:textColor="@color/material_dynamic_primary10"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_centerHorizontal="true"
-        app:layout_constraintTop_toBottomOf="@id/loginButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
         android:clickable="true"
-        android:focusable="true" />
-
+        android:focusable="true"
+        android:padding="20dp"
+        android:text="Forgot Password?"
+        android:textColor="@color/material_dynamic_primary10" />
 </LinearLayout>
