--- a/app/src/main/res/layout/fragment_image_recognition.xml
+++ b/app/src/main/res/layout/fragment_image_recognition.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ImageRecognitionFragment">
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="Placeholder for description if necessary" />
+
+    <Button
+        android:id="@+id/upload_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload Image" />
 
     <TextView
-        android:id="@+id/nav_image_rec"
+        android:id="@+id/result_text_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="to be filled with api image recog" />
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:textSize="16sp"
+        android:text="Scan result will appear here" />
 
-</FrameLayout>
+</LinearLayout>
