--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2edc9"
+    android:background="#fbffe8"
     tools:context=".view.HomeActivity">
 
     <FrameLayout
@@ -21,7 +21,7 @@
         android:id="@+id/bottomNav"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="#f2edc9"
+        android:background="#fbffe8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
