--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2edc9"
+    android:background="#fbffe8"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -16,7 +15,7 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:layout_marginBottom="32dp"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:src="@drawable/login_icon" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -53,9 +52,9 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
+        android:layout_width="383dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/material_dynamic_primary10"
+        android:backgroundTint="#FF5722"
         android:padding="12dp"
         android:text="Login"
         android:textColor="@color/white" />
