--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="themeOrange">#FF5722</color>
+    <color name="lightGray">#d3d3d3</color>
+
+
+
+
 </resources>
