--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fbffe8"
+    android:background="@color/themeLightBackground"
     android:orientation="vertical"
     android:padding="16dp">
 
