--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="themeOrange">#FF5722</color>
     <color name="lightGray">#d3d3d3</color>
+    <color name="themeLightBackground">#F8F4E3</color>
+
+
+
+
 
 
 
