--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,15 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="themeOrange">#FF5722</color>
+    <color name="themeOrange">#EE8057</color>
     <color name="lightGray">#d3d3d3</color>
     <color name="themeLightBackground">#F8F4E3</color>
-
-
-
-
-
-
+    <color name="userMessageColor">#FFFFFFFF</color>
 
 
 </resources>
