--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#f2edc9"
     android:padding="16dp">
@@ -53,4 +54,5 @@
         android:layout_margin="5dp"
         android:layout_height="48dp"
         android:text="Register" />
+
 </LinearLayout>
