--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -65,4 +65,14 @@
         android:text="+1 (555) 555-5555"
         android:layout_marginBottom="8dp" />
 
+    <Button
+        android:id="@+id/logOutButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#FF5722"
+        android:text="Sign Out"
+        android:textColor="@color/white" />
+
 </LinearLayout>
