--- a/app/src/main/res/layout/fragment_image_recognition.xml
+++ b/app/src/main/res/layout/fragment_image_recognition.xml
@@ -42,8 +42,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:text="Upload a photo here to identify the animal and learn more about it!"
             android:textColor="#000"
-            android:textSize="16sp"
+            android:textSize="12sp"
              />
     </LinearLayout>
 </ScrollView>
