--- a/app/src/main/res/layout/fragment_image_recognition.xml
+++ b/app/src/main/res/layout/fragment_image_recognition.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,24 +27,43 @@
             android:layout_marginBottom="16dp" />
 
         <!-- Upload Button -->
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/upload_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Upload"
-            android:layout_marginBottom="8dp" />
+            android:contentDescription="Upload image"
+            android:src="@drawable/ic_add"
+            app:fabCustomSize="70dp"
+            app:backgroundTint="#FF5722"
+            app:tint="@android:color/white"
+            android:scaleType="center" />
+
+
 
         <!-- Scrollable API Response -->
-        <TextView
-            android:id="@+id/result_text_view"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="Upload a photo here to identify the animal and learn more about it!"
-            android:textColor="#000"
-            android:textSize="12sp"
-             />
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="8dp">
+
+            <TextView
+                android:id="@+id/result_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                android:text="Upload a photo here to identify the animal and learn more about it!"
+                android:textColor="#000"
+                android:textSize="14sp"
+                 />
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
